# Droplet-Optical-Microscopy-Images-Analysis

./: .gitignore  README.md  pyproject.toml
DropletCorLab/: __init__.py  common.py  scalers.py
DropletCorLab/analysis/: analyze_p_file.py
DropletCorLab/compute/: clustering.py  data_pipeline.py  pca.py
DropletCorLab/features/learned/: __init__.py
DropletCorLab/features/statistical/: __init__.py
DropletCorLab/preprocessing/: __init__.py  aligment.py  cropping.py
DropletCorLab/segmentation/: __init__.py  analyze_binary_mask.py  roi_definition.py
data/: readme.md
data/demo/coords/: 0_geo.json  0_inner.json  0_outer_0.4.json
data/demo/pc_df_roi_0.4/: inner_4_outer_6.csv  inner_4_outer_6_pro_included.csv
data/demo/raw_ae_roi_0.4/: 0_raw.pkl  100_raw.pkl  10_raw.pkl  20_raw.pkl  30_raw.pkl  40_raw.pkl  50_raw.pkl  60_raw.pkl  70_raw.pkl  80_raw.pkl  90_raw.pkl  ae_inner.pth  ae_outer.pth
data/demo/raw_roi_0.4/: 0_raw.pkl  100_raw.pkl  10_raw.pkl  20_raw.pkl  30_raw.pkl  40_raw.pkl  50_raw.pkl  60_raw.pkl  70_raw.pkl  80_raw.pkl  90_raw.pkl
droplet_corr_lab/: __init__.py
droplet_corr_lab/analysis/: __init__.py  analyze_p_file.py
droplet_corr_lab/compute/: __init__.py  clustering.py  data_pipeline.py  pca.py
droplet_corr_lab/features/: __init__.py  interpolate.py
droplet_corr_lab/features/learned/: __init__.py
droplet_corr_lab/features/statistical/: __init__.py
droplet_corr_lab/preprocessing/: __init__.py
droplet_corr_lab/segmentation/: sam_wrapper.py
examples/: README.md  demo_pipeline.ipynb
tests/: test_imports.py
(+13 files in other folders)
